tenzir/tests/exec/expr/escape/basic/out_of_range.tql
// error: true

from {
  x: "\u{120301230123}",
}
